--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"json-server -watch db.json\"",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "concurrently": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
